--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue-next": "^0.15.0",
     "core-js": "^3.8.3",
     "vue": "^3.3.8",
     "vuedraggable": "^4.1.0"
