--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue-next": "^0.15.0",
     "core-js": "^3.8.3",
     "vue": "^3.3.8",
+    "vue-router": "^4.2.5",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
