--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.15.0",
     "core-js": "^3.8.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
     "vuedraggable": "^4.1.0"
