--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
+      - run: git config user.name github-actions
+      - run: git config user.email github-actions@github.com
+      - run: git pull
+      - run: git checkout -b gh-pages origin/gh-pages
+      - run: git reset --hard main
+      - run: npm install --legacy-peer-deps
+      - run: npm run build
+      - run: git config user.name github-actions
+      - run: git config user.email github-actions@github.com
+      - run: git add .
+      - run: git commit -m "Add dist" -a
+      - run: git push -f origin gh-pages
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
