--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -11,7 +11,16 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  actions: write
+  checks: write
+  contents: write
+  deployments: write
+  issues: write
+  packages: write
+  pull-requests: write
+  repository-projects: write
+  security-events: write
+  statuses: write
   pages: write
   id-token: write
 
